# apollo-led-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  README.md  apollo-led.service  docker-compose.yml  pyproject.toml
src/: animations.py  config.py  main.py  mcp_server.py  renderer.py  wled.py
src/static/: app.js  index.html  style.css
